--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,10 +1,4 @@
-/* stylelint-disable selector-max-id, scss/at-rule-no-unknown */
-@tailwind base;
-
-@tailwind components;
-
-@tailwind utilities;
-
+/* stylelint-disable selector-max-id, value-keyword-case */
 #nprogress {
   pointer-events: none;
 }
@@ -16,7 +10,7 @@
   z-index: 1031;
   width: 100%;
   height: 2px;
-  background: #1890ff;
+  background: $color-primary;
 }
 
 #nprogress .peg {
@@ -25,7 +19,7 @@
   display: block;
   width: 100px;
   height: 100%;
-  box-shadow: 0 0 10px #1890ff, 0 0 5px #1890ff;
+  box-shadow: 0 0 10px $color-primary, 0 0 5px $color-primary;
   opacity: 1;
   transform: rotate(3deg) translate(0, -4px);
 }
@@ -43,8 +37,8 @@
   width: 18px;
   height: 18px;
   border: solid 2px transparent;
-  border-top-color: #1890ff;
-  border-left-color: #1890ff;
+  border-top-color: $color-primary;
+  border-left-color: $color-primary;
   border-radius: 50%;
   animation: nprogress-spinner 400ms linear infinite;
 }
@@ -75,9 +69,8 @@
 }
 
 html {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "PingFang SC",
-    "Hiragino Sans GB", "Microsoft YaHei", Avenir, "Helvetica Neue", elvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei",
+    Avenir, "Helvetica Neue", elvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 14px;
   line-height: 1.5714;
   -webkit-font-smoothing: antialiased;
