--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,13 +2,12 @@ $color-primary: #1890ff;
 $color-success: #52c41a;
 $color-warning: #faad14;
 $color-danger: #ff4d4f;
-$color-info: $color-primary;
-$color-text-primary: #000000d9;
-$color-text-regular: #000000d9;
-$color-text-secondary: #00000073;
-$color-text-placeholder: #bfbfbf;
-$color-border: #b3b3b3;
-$color-border-light: #d8d8d8;
-$color-border-lighter: #e6e6e6;
-$color-border-extra-light: #f2f2f2;
-$color-background: #f4f4f4;
+$color-info: #1890ff;
+$text-color: rgba(0, 0, 0, 85%);
+$text-color-secondary: rgba(0, 0, 0, 45%);
+$text-color-placeholder: #bfbfbf;
+$border-color: #8c8c8c;
+$border-color-light: #bfbfbf;
+$border-color-lighter: #d9d9d9;
+$border-color-extra-light: #f0f0f0;
+$background-color: #f4f4f4;
