feat: use vuetify, update deps and docs

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,13 +1,1 @@
-$color-primary: #1890ff;
-$color-success: #52c41a;
-$color-warning: #faad14;
-$color-danger: #ff4d4f;
-$color-info: #1890ff;
-$text-color: rgba(0, 0, 0, 85%);
-$text-color-secondary: rgba(0, 0, 0, 45%);
-$text-color-placeholder: #bfbfbf;
-$border-color: #8c8c8c;
-$border-color-light: #bfbfbf;
-$border-color-lighter: #d9d9d9;
-$border-color-extra-light: #f0f0f0;
-$background-color: #f4f4f4;
+// custom variables here
