--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,7 +1,18 @@
 /* stylelint-disable selector-max-id, value-keyword-case */
+@import "~ress";
 @import "~nprogress/nprogress.css";
+@import "~element-ui/packages/theme-chalk/src/index";
+@import "~element-ui/lib/theme-chalk/display.css";
+@import "~element-ui/lib/theme-chalk/base.css";
 
 html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.el-container {
+  > .el-main {
+    padding-top: 60px;
+    padding-left: 256px;
+  }
 }
