--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,3 @@
-// check https://vuetifyjs.com/en/features/sass-variables/#vue-cli-install
-// preset variables https://github.com/vuetifyjs/vuetify/blob/master/packages/vuetify/src/styles/settings/_variables.scss
+/* stylelint-disable scss/dollar-variable-pattern */
 // custom variables here
+$--font-path: "~element-ui/lib/theme-chalk/fonts";
