--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,3 +8,25 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.expansion {
+  position: relative;
+
+  &::after {
+    position: absolute;
+    top: -0.75rem;
+    right: -0.75rem;
+    bottom: -0.75rem;
+    left: -0.75rem;
+    color: transparent;
+    content: "";
+    background-color: transparent;
+    border-color: transparent;
+  }
+}
+
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
