fix: update styles

--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -48,11 +48,12 @@
   font-variant-numeric: stacked-fractions;
 }
 
-.transition {
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.transition {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  transition-property: all;
+}
