--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,48 @@
 /* stylelint-disable scss/dollar-variable-pattern */
 // custom variables here
 $--font-path: "~element-ui/lib/theme-chalk/fonts";
+
+$--color-primary: #1890ff;
+$--color-success: #52c41a;
+$--color-warning: #faad14;
+$--color-danger: #f5222d;
+$--color-info: #1890ff;
+
+$--color-text-primary: #333 !default;
+$--color-text-regular: #666 !default;
+$--color-text-secondary: #999 !default;
+$--color-text-placeholder: #ccc !default;
+$--border-color-base: #d9d9d9 !default;
+$--border-color-light: #f0f0f0 !default;
+$--border-color-lighter: #f5f5f5 !default;
+$--border-color-extra-light: #fafafa !default;
+
+$--background-color-base: #f0f0f0 !default;
+
+$--font-size-extra-large: 24px;
+$--font-size-large: 20px;
+$--font-size-medium: 18px;
+$--font-size-base: 16px;
+$--font-size-small: 14px;
+$--font-size-extra-small: 12px;
+
+$--size-base: 16px;
+
+$--checkbox-font-size: 16px;
+$--checkbox-input-height: 16px !default;
+$--checkbox-input-width: 16px !default;
+$--checkbox-bordered-medium-input-height: 16px !default;
+$--checkbox-bordered-medium-input-width: 16px !default;
+
+$--radio-input-height: 16px !default;
+$--radio-input-width: 16px !default;
+$--radio-bordered-medium-input-height: 16px !default;
+$--radio-bordered-medium-input-width: 16px !default;
+
+$--select-input-font-size: 16px !default;
+
+$--input-medium-font-size: 16px !default;
+
+$--dialog-content-font-size: 16px !default;
+
+$--avatar-text-font-size: 16px !default;
