--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,17 +1,8 @@
 /* stylelint-disable scss/dollar-variable-pattern */
 // custom variables here
-$--font-path: "~element-ui/lib/theme-chalk/fonts";
+$--font-path: "element-ui/lib/theme-chalk/fonts";
 $--color-primary: #1890ff;
 $--color-success: #52c41a;
 $--color-warning: #faad14;
 $--color-danger: #f5222d;
 $--color-info: #1890ff;
-$--color-text-primary: #333 !default;
-$--color-text-regular: #666 !default;
-$--color-text-secondary: #999 !default;
-$--color-text-placeholder: #ccc !default;
-$--border-color-base: #d9d9d9 !default;
-$--border-color-light: #f0f0f0 !default;
-$--border-color-lighter: #f5f5f5 !default;
-$--border-color-extra-light: #fafafa !default;
-$--background-color-base: #f0f0f0 !default;
