--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,20 +2,9 @@
 @import "element-ui/packages/theme-chalk/src/index";
 @import "element-ui/lib/theme-chalk/display.css";
 
-::-webkit-scrollbar {
-  width: 8px;
-  height: 8px;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: rgba(50, 50, 50, 30%);
-  border-radius: 1em;
-}
-
-::-webkit-scrollbar-track {
-  background-color: rgba(50, 50, 50, 10%);
-  border-radius: 1em;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
@@ -54,27 +43,6 @@
     --color-heading: var(--vt-c-text-dark-1);
     --color-text: var(--vt-c-text-dark-2);
   }
-}
-
-*,
-*::before,
-*::after {
-  position: relative;
-  box-sizing: border-box;
-  margin: 0;
-  font-weight: normal;
-}
-
-html {
-  font-size: 14px;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica,
-    "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, "Noto Sans", sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 .expansion {
