--- a/src/styles/preflight.scss
+++ b/src/styles/preflight.scss
@@ -1,1 +1,35 @@
 @import "modern-normalize";
+
+// ::-webkit-scrollbar {
+//   width: 8px;
+//   height: 8px;
+// }
+
+// ::-webkit-scrollbar-thumb {
+//   background-color: rgba(50, 50, 50, 30%);
+//   border-radius: 1em;
+// }
+
+// ::-webkit-scrollbar-track {
+//   background-color: rgba(50, 50, 50, 10%);
+//   border-radius: 1em;
+// }
+
+*,
+*::before,
+*::after {
+  position: relative;
+  box-sizing: border-box;
+  margin: 0;
+  font-weight: normal;
+}
+
+html,
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica,
+    "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, "Noto Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 14px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
